--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
+    "openai": "^5.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0"
