--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.11.4",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
