--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "export": "next export",
     "build-export": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "next": "^15.3.3",
-    "openai": "^5.8.2",
+    "openai": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^5.11.4",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "8.56.0",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.0"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
